[package]
name = "cjdrs"
version = "0.0.1"
authors = ["Vanhala Antti <antti.vanhala@aalto.fi>"]
license = "MIT"

[lib]
name = "cjdrs"
path = "src/cjdrs/lib.rs"

[[bin]]
name = "cjdrs"
doc = false

[dependencies.tuntap]
git = "https://github.com/Randati/tuntap-rust.git"
#path = "../tuntap-rust"

[dependencies.rust-crypto]
git = "https://github.com/DaGenix/rust-crypto.git"

[dependencies.mio]
git = "https://github.com/Randati/mio.git"
#path = "../mio"
